--- a/Practice-3/Phan Duc Anh/nginx/index.html
+++ b/Practice-3/Phan Duc Anh/nginx/index.html
@@ -26,6 +26,7 @@
     <h1>Attendees' Info</h1>
     <table class="info-table">
       <tr>
+        <th>STT</th>
         <th>Full name</th>
         <th>Year of Birth</th>
         <th>Gender</th>
